force-app/main/default/objects/Change_Management__c/Change_Management__c.object-meta.xml
<CustomObject>
    <label>Change Management</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Change Management</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>