force-app/main/default/objects/Change_Management__c/fields/Bulk__c.field-meta.xml
<CustomField>
    <fullName>Bulk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Bulk changes that pertain to the same change Category and Type.</inlineHelpText>
    <label>Bulk</label>
    <type>Checkbox</type>
</CustomField>