force-app/main/default/objects/Change_Management__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>CMS Tool</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>Connected App</fullName>
            </value>
            <value>
                <fullName>Custom Button</fullName>
            </value>
            <value>
                <fullName>Custom Label</fullName>
            </value>
            <value>
                <fullName>Email Alert</fullName>
            </value>
            <value>
                <fullName>Email Template</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Global Publisher Layout</fullName>
            </value>
            <value>
                <fullName>Lightning Page</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Object</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Permission Set Group</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>Record Type</fullName>
            </value>
            <value>
                <fullName>Report Type</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Salesforce Feature Enabled</fullName>
            </value>
            <value>
                <fullName>System Maintenance</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>