force-app/main/default/objects/Change_Management__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>