force-app/main/default/objects/Change_Management__c/fields/Notify_DEV__c.field-meta.xml
<CustomField>
    <fullName>Notify_DEV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify DEV</label>
    <type>Checkbox</type>
</CustomField>