force-app/main/default/objects/Change_Management__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Link</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Advisory Board Membership</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Bucket Fund</fullName>
            </value>
            <value>
                <fullName>Bucket Fund Line Item</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Campaign Member</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contact Enrollment</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Course Enrollment</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Event Contact Role</fullName>
            </value>
            <value>
                <fullName>Event Inventory Detail</fullName>
            </value>
            <value>
                <fullName>Event or Conference</fullName>
            </value>
            <value>
                <fullName>Finance Request</fullName>
            </value>
            <value>
                <fullName>General Ledger Account</fullName>
            </value>
            <value>
                <fullName>IT Asset</fullName>
            </value>
            <value>
                <fullName>Job Order</fullName>
            </value>
            <value>
                <fullName>Job Role</fullName>
            </value>
            <value>
                <fullName>Job Ticket</fullName>
            </value>
            <value>
                <fullName>Journal Line Item</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>License Contract</fullName>
            </value>
            <value>
                <fullName>License Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>