force-app/main/default/objects/Change_Management__c/fields/Parent_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Change Management (Related)</relationshipLabel>
    <relationshipName>Change_Management1</relationshipName>
    <type>Lookup</type>
</CustomField>