force-app/main/default/objects/Change_Management__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Change Management</relationshipLabel>
    <relationshipName>Change_Management</relationshipName>
    <type>Lookup</type>
</CustomField>