force-app/main/default/objects/Change_Management__c/validationRules/Category_Field_Requires_Object.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Field_Requires_Object</fullName>
    <active>true</active>
    <description
  >If the Category is &quot;Field&quot; then the Object field is required.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Category__c, &quot;Field&quot;),
    ISBLANK(TEXT(Object__c))
)</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>Object field is required.</errorMessage>
</ValidationRule>