force-app/main/default/objects/Change_Management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Summary__c</columns>
    <columns>Object__c</columns>
    <columns>Ticket__c</columns>
    <columns>Parent_Ticket__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Bulk__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>